--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<blockquote class="questions">
+	<ol>
+	<li><p>Who was the first female to become the governor of an Indian state?</p></li>	
+<li><p>Who among first Woman to climb Mount Everest twice?</p></li>	
+<li><p>Who is President of India?</p></li>	
+	</ol>
+	 
+</blockquote>
 </body>
 
 </html>
