--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<blockquote class="questions">
+<blockquote>
 	<ol>
-	<li><p>Who was the first female to become the governor of an Indian state?</p></li>	
-<li><p>Who among first Woman to climb Mount Everest twice?</p></li>	
-<li><p>Who is President of India?</p></li>	
+	<li><p class="questions">Who was the first female to become the governor of an Indian state?</p></li>	
+<li><p class="questions">Who among first Woman to climb Mount Everest twice?</p></li>	
+<li  ><p class="questions" >Who is President of India?</p></li>	
 	</ol>
 	 
 </blockquote>
