--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<blockquote>
-	<ol>
-	<li><p class="questions">Who was the first female to become the governor of an Indian state?</p></li>	
-<li><p class="questions">Who among first Woman to climb Mount Everest twice?</p></li>	
-<li  ><p class="questions" >Who is President of India?</p></li>	
-	</ol>
+ 
+	 <ol>
+	<blockquote class="questions"><li><p>Who was the first female to become the governor of an Indian state?</p></li></blockquote>  	
+ <blockquote class="questions"><li><p>Who among first Woman to climb Mount Everest twice?</p></li></blockquote>  	
+ <blockquote class="questions"><li><p>Who is President of India?</p></li></blockquote> 	
+</ol>
 	 
-</blockquote>
+ 
 </body>
 
 </html>
